0.9.0/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomialResults.rst.txt
statsmodels.discrete.discrete_model.NegativeBinomialResults
===========================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomialResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~NegativeBinomialResults.aic
    
    
      ~NegativeBinomialResults.bic
    
    
      ~NegativeBinomialResults.bse
    
    
      ~NegativeBinomialResults.conf_int
    
    
      ~NegativeBinomialResults.cov_params
    
    
      ~NegativeBinomialResults.f_test
    
    
      ~NegativeBinomialResults.fittedvalues
    
    
      ~NegativeBinomialResults.get_margeff
    
    
      ~NegativeBinomialResults.initialize
    
    
      ~NegativeBinomialResults.llf
    
    
      ~NegativeBinomialResults.llnull
    
    
      ~NegativeBinomialResults.llr
    
    
      ~NegativeBinomialResults.llr_pvalue
    
    
      ~NegativeBinomialResults.lnalpha
    
    
      ~NegativeBinomialResults.lnalpha_std_err
    
    
      ~NegativeBinomialResults.load
    
    
      ~NegativeBinomialResults.normalized_cov_params
    
    
      ~NegativeBinomialResults.predict
    
    
      ~NegativeBinomialResults.prsquared
    
    
      ~NegativeBinomialResults.pvalues
    
    
      ~NegativeBinomialResults.remove_data
    
    
      ~NegativeBinomialResults.resid
    
    
      ~NegativeBinomialResults.save
    
    
      ~NegativeBinomialResults.set_null_options
    
    
      ~NegativeBinomialResults.summary
    
    
      ~NegativeBinomialResults.summary2
    
    
      ~NegativeBinomialResults.t_test
    
    
      ~NegativeBinomialResults.t_test_pairwise
    
    
      ~NegativeBinomialResults.tvalues
    
    
      ~NegativeBinomialResults.wald_test
    
    
      ~NegativeBinomialResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NegativeBinomialResults.use_t
   
   