0.10.0rc1/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomialResults.rst.txt
statsmodels.discrete.discrete\_model.NegativeBinomialResults
============================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomialResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         NegativeBinomialResults.aic
         NegativeBinomialResults.bic
         NegativeBinomialResults.bse
         NegativeBinomialResults.conf_int
         NegativeBinomialResults.cov_params
         NegativeBinomialResults.f_test
         NegativeBinomialResults.fittedvalues
         NegativeBinomialResults.get_margeff
         NegativeBinomialResults.initialize
         NegativeBinomialResults.llf
         NegativeBinomialResults.llnull
         NegativeBinomialResults.llr
         NegativeBinomialResults.llr_pvalue
         NegativeBinomialResults.lnalpha
         NegativeBinomialResults.lnalpha_std_err
         NegativeBinomialResults.load
         NegativeBinomialResults.normalized_cov_params
         NegativeBinomialResults.predict
         NegativeBinomialResults.prsquared
         NegativeBinomialResults.pvalues
         NegativeBinomialResults.remove_data
         NegativeBinomialResults.resid
         NegativeBinomialResults.resid_response
         NegativeBinomialResults.save
         NegativeBinomialResults.set_null_options
         NegativeBinomialResults.summary
         NegativeBinomialResults.summary2
         NegativeBinomialResults.t_test
         NegativeBinomialResults.t_test_pairwise
         NegativeBinomialResults.tvalues
         NegativeBinomialResults.wald_test
         NegativeBinomialResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         NegativeBinomialResults.use_t

